# QuantTrade

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test1.py  test2.py  test3.py  test4.py
.github/workflows/: ci.yml
docs/: architecture_migration_plan.md  decision_tensor_protocol.md  execution_wiring_design.md  news_llm_covariate_protocol.md  stock_covariate_integration.md
docs/adr/: 0001-protocol-first-package-ownership.md  0002-strict-reportability-default.md  0003-return-basis-content-hash.md  (+3 more)
legacy/: README.md
rl_quant/: README.md  pyproject.toml
scripts/: analyze_2026_strategy_variation.py  audit_polygon_second_aggs.py  build_2026_rl_strategy_dataset.py  build_hour_from_second_dataset.py  build_hourly_from_minute_context_dataset.py  build_hourly_from_second_context_dataset.py  build_hourly_transformer_dataset.py  build_minute_transformer_dataset.py  build_news_article_table.py  build_news_llm_aggregates.py  build_news_llm_features.py  build_second_context_decision_dataset.py  build_stock_covariate_silver_features.py  build_stock_second_silver_features.py  check_torch_cuda.py  convert_polygon_second_to_protocol.py  download_daily_ohlcv.py  download_hourly_ohlcv.py  download_intraday_ohlcv.py  evaluate_second_context_dataset.py  export_live_bundle.py  extract_nbbo_features.py  fetch_top_us_market_cap_universe.py  fetch_top_volume_universes.py  generate_qwen_news_precomputed.py  integrate_stock_covariates_with_hour_partitions.py  learn_market_ecological_attention.py  massive_2026_momentum_test.py  merge_market_ecology_with_rl_states.py  rank_2026_strategy_stability.py  train_dqn_agent.py  train_hour_from_second_rl.py  train_hourly_causal_transformer_rl.py  train_hourly_from_minute_context_rl.py  train_hourly_from_second_calendar_holdout.py  train_hourly_from_second_context_rl.py  train_hourly_from_second_protocol_partitions.py  train_minute_causal_transformer_rl.py  train_second_context_action_scorer.py  train_second_context_rl.py  (+2 more)
tests/: _support.py  test_action_risk.py  test_bar_dataset.py  test_context_policy_split.py  test_core_and_fix_regression.py  test_correctness.py  test_daily_parser.py  test_daily_raw.py  test_decision_framework.py  test_dollar_volume_clip.py  test_evaluation.py  test_export_live_bundle.py  test_golden_artifacts.py  test_hourly_split.py  test_import_boundaries.py  test_minute_to_hour.py  test_no_feature_engineering.py  test_partition_trainer_reportability.py  test_phase1_framework.py  test_repository_hygiene.py  test_research_protocol.py  test_review_revision_fixes.py  test_schema.py  test_scripts_are_wrappers.py  test_second_to_hour.py  test_streaming.py  test_synthetic_invariants.py
(+131 files in other folders)
