[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-quant"
version = "0.1.0"
description = "Compact reinforcement-learning trading framework for intraday, daily strategy, and hourly market-context experiments"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2,<3",
    "torch>=2.8,<3",
]

[project.optional-dependencies]
data = [
    "pandas>=2.2,<3",
    "pyarrow>=16,<23",
]
llm = [
    "transformers>=4.43,<5",
    "huggingface-hub>=0.24,<2",
    "accelerate>=0.33,<2",
    "sentencepiece>=0.2,<1",
    "safetensors>=0.4,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.8,<1",
    "mypy>=1.11,<2",
    "types-requests",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
where = ["src"]
